# crowfounding

./: manage.py  pyproject.toml
crownfundingapp/: asgi.py  settings.py  urls.py  wsgi.py
crownfundingweb/: admin.py  apps.py  views.py
crownfundingweb/migrations/: 0001_initial.py
crownfundingweb/models/: __init__.py  campania.py  categoria.py  contribucion.py
crownfundingweb/templates/: index.html
data/: base.csv
